--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/xuyannus/videoinfo#readme",
   "dependencies": {
-    "electron": "^9.1.0"
+    "electron": "^9.1.0",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
